# kough

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  vite.config.ts
docs/superpowers/plans/: 2026-05-24-kough-feature-pack.md  2026-06-24-sync-android-plan.md
docs/superpowers/specs/: 2026-06-24-sync-android-design.md
src-tauri/: Cargo.toml
src-tauri/src/: lib.rs
src-tauri/src/commands/: activity.rs  mod.rs  sync.rs  trash.rs
src-tauri/src/db/: activity_repository.rs  connection.rs  migrations.rs  repository.rs
src-tauri/src/models/: mod.rs  trash.rs
src-tauri/src/sync/: apply.rs  changes.rs  client.rs  mod.rs
src-tauri/src/tracker/: icon.rs  mod.rs  tracker.rs
src/components/activity/: ActivityChart.tsx  BrowserDetail.tsx  SummaryCards.tsx
src/components/board/: Board.tsx  Column.tsx  TaskCard.tsx
src/components/layout/: MainContent.tsx  Sidebar.tsx  TitleBar.tsx  TrashView.tsx
src/components/settings/: SyncSettings.tsx
src/components/task/: DescriptionEditor.tsx  TaskDetailModal.tsx
src/components/ui/: confirm-dialog.tsx
src/lib/: invoke.ts  platform.ts
src/stores/: activityStore.ts  boardStore.ts  syncStore.ts  tagStore.ts  taskStore.ts  uiStore.ts
src/types/: index.ts
sync-worker/: package-lock.json  package.json  schema.sql  worker.js  wrangler.toml
